--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "react-dom": "^16.4.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.5.0",
+    "eslint-plugin-react": "^7.11.1",
     "plop": "^2.1.0",
     "webpack-dev-server": "2.11.2"
   }
