--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@rails/webpacker": "3.5",
     "autoprefixer": "^9.1.5",
     "babel-preset-react": "^6.24.1",
+    "callbag-map": "^1.0.1",
+    "callbag-pipe": "^1.1.1",
+    "callbag-subject": "^1.0.2",
+    "callbag-subscribe": "^1.4.1",
     "css-loader": "^1.0.0",
     "formik": "^1.2.0",
     "postcss-loader": "^3.0.0",
